--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -96,6 +96,18 @@ MVBS_latlon <- MVBS %>% # Location of acoustic data
   summarise(lat = mean(lat), 
             lon = mean(lon)) %>%
   ungroup() 
+SA_grid_laea <- SA_grid_laea %>%
+  mutate(LME = case_when(LME == "Beaufort Sea LME" ~ "BF",
+                         LME == "Central Arctic LME" ~ "CAO",
+                         LME == "Baffin Bay LME" ~ "BB",
+                         LME == "Barents Sea LME" ~ "SV",
+                         LME == "Northern Canadian Archipelago LME" ~
+                           "NAR"),
+         LME = factor(if_else(LME == "CAO" & yc <= 0, "SV",
+                      if_else(LME == "CAO" & yc > 0, "BF",
+                      if_else(LME == "NAR", "BB", LME))),
+                      levels = c("BF", "NAR", "BB", "SV"))) %>%
+  droplevels()
 
 # CTD data
 # load("data/CTD/CTD_2015_2019.RData")
@@ -243,7 +255,7 @@ IHO_sf_latlon <- dir_ls("data/arctic_regions/IHO", glob = "*.shp") %>%
 LME_sf <- read_sf("data/arctic_regions/LME/LME_2013_polygon.shp") %>%
     st_transform(crs = crs(arctic_laea))
 LME <- readOGR("data/arctic_regions/LME/LME_2013_polygon.shp",
-                  verbose = F) %>% 
+               verbose = F) %>% 
   spTransform(CRSobj = crs(arctic_laea)) %>% # Project shapefile in laea
   fortify() %>% # Convert to dataframe for ggplot
   rename(xc = long, yc = lat)
@@ -308,13 +320,12 @@ SA_all_area <- SA_grid_laea %>%
             CM_mad = round(mean(CM_mad, na.rm = T)),
             CM_mean = round(mean(CM_mean, na.rm = T)),
             CM_sd = round(mean(CM_sd, na.rm = T))) %>%
-  mutate(IHO_area = "All areas")
+  mutate(LME = "All areas")
 
 # Calculate median SA within each area
 SA_grid_laea %>%
-  # filter(empty_clean == F) %>%
-  mutate(IHO_area == as.character(IHO_area)) %>%
-  group_by(IHO_area, year) %>%  # median per year
+  mutate(LME == as.character(LME)) %>%
+  group_by(LME, year) %>% # median per year
   summarise(n = n(),
             NASC_int_median = median(NASC_int, na.rm = T),
             NASC_int_mad = mad(NASC_int, na.rm = T), 
@@ -327,7 +338,7 @@ SA_grid_laea %>%
             CM_mean = mean(CM, na.rm = T),
             CM_sd = sd(CM, na.rm = T)) %>%
   ungroup() %>%
-  group_by(IHO_area) %>% # Mean per area
+  group_by(LME) %>% # Mean per area
   summarise(n = sum(n), # Mean across all areas and years
             NASC_int_median = round(mean(NASC_int_median, na.rm = T), 1),
             NASC_int_mad = round(mean(NASC_int_mad, na.rm = T), 1),
@@ -341,19 +352,7 @@ SA_grid_laea %>%
             CM_sd = round(mean(CM_sd, na.rm = T))) %>%
   ungroup() %>% 
   bind_rows(., SA_all_area) %>%
-  mutate(IHO_area = factor(
-    case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
-              IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
-              IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
-              IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
-              IHO_area == "Baffin Bay" ~ "Baffin Bay",
-              IHO_area == "Davis Strait" ~ "Davis Strait",
-              IHO_area == "All areas" ~ "All areas"),
-    levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-               "Baffin Bay", "Davis Strait", "East Arctic\nOcean", 
-               "All areas"))) %>%
-  arrange(IHO_area) %>%
-  # dplyr::select(-CM_median, -CM_mad) %>%
+  mutate(LME = factor(LME, levels = c("BF", "BB", "SV", "All areas"))) %>%
   kbl() %>%
   kable_classic()
 ```
@@ -370,8 +369,10 @@ p_map_laea <- bathy_laea %>%
   ggplot(aes(x = xc, y = yc)) +
   # Plot bathy
   geom_raster(aes(fill = depth_d)) +
-  scale_fill_cmocean("Depth (m)", name = "deep",
-                     discrete = T, na.value = NA, alpha = 0.3) +
+  # scale_fill_cmocean("Depth (m)", name = "deep",
+  #                    discrete = T, na.value = NA, alpha = 0.3) +
+  scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  guides(fill = "none") + 
   new_scale_fill() +
   # Areas of interest
   # geom_polygon(data = IHO_WAO, aes(x = xc, y = yc, group = group),
@@ -386,24 +387,30 @@ p_map_laea <- bathy_laea %>%
   #            fill = NA, col = "green", lwd = 0.3, lty = 1) +
   # geom_shape(data = IHO_EAO, aes(x = xc, y = yc, group = group),
   #            fill = NA, col = "yellow", lwd = 0.3, lty = 1) +
-  geom_polygon(data = LME, aes(x = xc, y = yc, group = group, fill = group),
-               col = "red", alpha = 0.5, lwd = 0.3, lty = 1) +
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
+               col = "orange", fill = NA, alpha = 0.2, 
+               lwd = 0.5, lty = 1) +
   # Plot coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
                fill = "grey30") +
   # Arctic circle
   geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
-            col = "grey10", lty = 2, size = 0.3) +
-  coord_fixed(xlim = c(-2450, 600), ylim = c(-1500, 1800), expand = F) +
-  guides(fill = guide_legend(keywidth = 0.2, keyheight = 0.2,
-                             default.unit = "in"), color = "none") +
+            col = "white", lty = 2, size = 0.5) +
+  coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1800), expand = F) +
+  guides(fill = "none") +
+  # Acoustics
+  geom_point(data = SA_raw_laea, aes(x = xc, y = yc), 
+             shape = 4, col = "darkblue", alpha = 0.5) +
+  # Trawls
+  geom_point(data = trawl_laea, aes(x = xc, y = yc),
+             shape = 23, fill = "orange") +
   theme(legend.position = "right", 
         panel.border = element_rect(fill = NA),
         axis.text = element_blank(),
         axis.ticks = element_blank(), 
         axis.title = element_blank())
 ggsave("plots/base_map_laeamap_stations.png",
-       p_map_laea, height = 3, width = 6, dpi = 600, units = "in")
+       p_map_laea, height = 4, width = 6, dpi = 600, units = "in")
 p_map_laea
 ```
 
@@ -710,12 +717,15 @@ p_Sv_prof_boxplot
 map_DSL <- SA_grid_laea %>% 
   mutate(NASC_int_d = cut(NASC_int, c(0, 1, 10, 100, 1000, 10000, Inf))) %>%
   ggplot(aes(x = xc,  y = yc)) +
-  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), alpha = 0.8) + # bathy
+  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d),
+              alpha = 0.8) + # bathy
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   guides(fill = "none") + 
   new_scale_fill() + 
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group), 
+               col = "black", fill = NA, lwd = 0.3, alpha = 1) + # LME
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
-               fill = "grey20") + # Coast
+               fill = "grey25") + # Coast
   # geom_point(aes(col = NASC_int_d), size = 0.6) +
   # scale_color_viridis_d(option = "plasma", 
   #                       labels = c("< 1", "1-10", "11-100", "101-1000", 
@@ -725,8 +735,7 @@ map_DSL <- SA_grid_laea %>%
                        labels = c("< 1", "1-10", "11-100", "101-1000", 
                                   "1001-10000", "> 10000")) +
   facet_wrap(~ year) +
-  coord_fixed(xlim = c(-2450, 600), ylim = c(-1500, 1800), expand = F) +
-  # coord_fixed(xlim = c(-2600, 1100), ylim = c(-1600, 1900), expand = F) +
+  coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1850), expand = F) +
   guides(fill = guide_legend(override.aes = list(size = 2), 
                                nrow = 1)) + 
   # guides(fill = "none",
@@ -775,12 +784,15 @@ map_DSL <- SA_grid_laea %>%
   mutate(NASC_int_d = cut(NASC_int, c(0, 1, 10, 100, 500, 1000, Inf))) %>%
   # mutate(NASC_int_d = cut(NASC_int, c(0, 1, 5, 10, 50, 100, 500, 1000, 5000, 10000, Inf), right = F)) %>%
   ggplot(aes(x = xc,  y = yc)) +
-  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), alpha = 0.8) + # bathy
+  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), 
+              alpha = 0.8) + # bathy
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   guides(fill = "none") + 
   new_scale_fill() + 
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group), 
+               col = "black", fill = NA, lwd = 0.3, alpha = 1) + # LME
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
-               fill = "grey20") + # Coast
+               fill = "grey25") + # Coast
   # geom_point(aes(col = NASC_int_d), size = 0.6) +
   # scale_color_viridis_d(option = "plasma", 
   #                       labels = c("< 1", "1-10", "11-100", "101-1000", 
@@ -1134,7 +1146,6 @@ heatmap_RA <- trawl_area_df %>%
         legend.box.margin = margin(0, 0, -5, 0),
         plot.margin = unit(c(0, 0.1, 0.01, 0), "in"))
 
-# Map relative abundance
 map_RA <- trawl_station_df %>%
   ggplot() +
   # Bathymetry
@@ -1143,9 +1154,12 @@ map_RA <- trawl_station_df %>%
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   guides(fill = "none") + 
   new_scale_fill() + 
+  # LME 
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group), 
+               col = "black", fill = NA, lwd = 0.3, alpha = 1) + # LME
   # Coastlines
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
-               fill = "grey25") + 
+               fill = "grey25") + # Coast
   # Abundance
   geom_scatterpie(data = trawl_station_df, aes(x = xc_jit,  y = yc_jit),
                   cols = c("Arctic cod", 
@@ -1186,13 +1200,16 @@ table1_RA
 ```{r LM-SA-latitude}
 lm_SA_lat <- LM_area_res %>%
   ggplot() + 
-  geom_point(aes(x = lat, y = SA_int, col = IHO), alpha = 0.5, size = 1) +
-  geom_line(aes(x = lat, y = .fitted, col = IHO), size = 0.6) + 
-  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = IHO, fill = IHO), alpha = 0.1) +
+  geom_point(aes(x = lat, y = SA_int, col = LME), alpha = 0.5, size = 1) +
+  geom_line(aes(x = lat, y = .fitted, col = LME), size = 0.6) + 
+  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = LME, fill = LME),
+              alpha = 0.1) +
   scale_x_continuous("Latitude (°N)", breaks = seq(0, 90, 2)) + 
   scale_y_continuous(expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) + 
-  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6, direction = -1)) +
-  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6,
+                                                    direction = -1)) +
+  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6, 
+                                                  direction = -1)) +
   coord_cartesian(ylim = c(-5, 45)) +
   guides(colour = guide_legend(nrow = 1, byrow = T)) +
   theme(legend.position = "top", 
@@ -1214,12 +1231,15 @@ lm_SA_lat
 map_DSL <- SA_grid_laea %>% 
   mutate(NASC_int_d = cut(NASC_int, c(0, 1, 10, 100, 500, 1000, Inf))) %>%
   ggplot(aes(x = xc,  y = yc)) +
-  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), alpha = 0.8) + # bathy
+  geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), 
+              alpha = 0.8) + # bathy
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   guides(fill = "none") + 
   new_scale_fill() + 
+  geom_polygon(data = LME, aes(x = xc, y = yc, group = group), 
+               col = "black", fill = NA, lwd = 0.3, alpha = 1) + # LME
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
-               fill = "grey20") + # Coast
+               fill = "grey25") + # Coast
   geom_tile(aes(fill = NASC_int_d), size = 0.2, col = "white") +
   scale_fill_viridis_d(expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
                        option = "viridis",
@@ -1236,17 +1256,23 @@ map_DSL <- SA_grid_laea %>%
         axis.title = element_blank())
 # LM
 lm_SA_lat <- LM_area_res %>%
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay", "Barents Sea"))) %>%
   ggplot() + 
-  geom_point(aes(x = lat, y = SA_int, col = IHO), alpha = 0.5, size = 1) +
-  geom_line(aes(x = lat, y = .fitted, col = IHO), size = 0.6) + 
-  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = IHO, fill = IHO), alpha = 0.1) +
+  geom_point(aes(x = lat, y = SA_int, col = LME), alpha = 0.5, size = 1) +
+  geom_line(aes(x = lat, y = .fitted, col = LME), size = 0.6) + 
+  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = LME, fill = LME),
+              alpha = 0.1) +
   scale_x_continuous("Latitude (°N)", breaks = seq(0, 90, 2)) + 
   scale_y_continuous(expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) + 
-  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6, direction = -1)) +
-  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6, direction = -1)) +
-  coord_cartesian(ylim = c(-5, 45)) +
-  guides(colour = guide_legend(nrow = 1, byrow = T)) +
-  theme(legend.position = "top", 
+  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6, 
+                                                    direction = -1)) +
+  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6,
+                                                  direction = -1)) +
+  coord_cartesian(ylim = c(-2, 45)) +
+  theme(legend.position = "right", 
         legend.title = element_blank(),
         legend.key.height = unit(0.15, "in"), 
         legend.key.width = unit(0.15, "in"), 
@@ -1265,77 +1291,42 @@ p_map_NASC_LM
 ## Figure 5. HGAM
 
 ```{r HGAM-plot}
-# GAM chlorophyll
-GAMSAI_chl <- predSA_I %>%
-  mutate(lty = factor(case_when(IHO %in% c("WAO_BF", "EAO") ~ 1,
-                                !IHO %in% c("WAO_BF", "EAO") ~ 2)),
-         IHO = as.character(IHO),
-         IHO = factor(
-           case_when(IHO == "WAO_BF" ~ "West Arctic Ocean\n& Beaufort Sea", 
-                     IHO == "CAA" ~ "Can. Arctic Archipelago", 
-                     IHO == "BB" ~ "Baffin Bay",
-                     IHO == "DS" ~ "Davis Strait", 
-                     IHO == "EAO" ~ "East Arctic Ocean"),
-           levels = c("West Arctic Ocean\n& Beaufort Sea",
-                      "Can. Arctic Archipelago", "Baffin Bay", "Davis Strait",
-                      "East Arctic Ocean"))) %>%
-  filter(var == "chl") %>%
+# GAM velocity
+GAMSAI_velo <- predSA_I %>%
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay", "Barents Sea"))) %>%
+  filter(var == "v") %>%
   ggplot() +
-  geom_line(aes(x = chl, y = SA_fit, col = IHO, linetype = lty), size = 0.6) +
-  geom_ribbon(aes(x = chl, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO),
-              alpha = 0.05) +
+  geom_line(aes(x = v, y = fitted, col = LME), size = 0.6) +
+  geom_ribbon(aes(x = v, ymin = lwr_ci, ymax = upr_ci, fill = LME), 
+              alpha = 0.1) +
   scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
   scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
-  coord_cartesian(xlim = c(0, 1.7), ylim = c(0, 47.5)) +
+  coord_cartesian(xlim = c(0, 4.1), ylim = c(0, 30)) +
   scale_x_continuous(breaks = seq(0, 10, 0.5)) +
-  labs(x = expression("Mean chlorophyll (mg m"^-3*")"),
+  # scale_y_continuous(breaks = seq(0, 30, 5)) +
+  scale_y_continuous(
+    expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
+    position = "left",
+    sec.axis = 
+      sec_axis(trans = ~10^(./10), 
+               name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
+               breaks = c(1, 5, 10, 50, 100, 500, 1000, 5000, 10000))) +
+
+  labs(x = expression("Mean velocity at 380 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   guides(linetype = "none") +
   theme(panel.border = element_blank(),
-        legend.key.height = unit(0.15, "in"), 
-        legend.key.width = unit(0.15, "in"), 
         axis.line = element_line(),
         legend.title = element_blank(), 
-        legend.position = "none",
-        legend.box.margin = margin(0, 0, 0, 0),
+        legend.position = "top",
         plot.margin = unit(c(0, 0, 0, 0), "in"))
-
-# GAM velocity
-GAMSAI_velo <- predSA_I %>%
-  mutate(lty = factor(case_when(IHO %in% c("WAO_BF", "EAO") ~ 1,
-                                !IHO %in% c("WAO_BF", "EAO") ~ 2))) %>%
-  filter(var == "v") %>%
-  ggplot() +
-  geom_line(aes(x = v, y = SA_fit, col = IHO, linetype = lty), size = 0.6) +
-  geom_ribbon(aes(x = v, ymin = SA_lwr_ci, ymax = SA_upr_ci, fill = IHO), 
-              alpha = 0.05) +
-  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
-  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
-  coord_cartesian(xlim = c(0, 4.1), ylim = c(0, 47.5)) +
-  scale_x_continuous(breaks = seq(0, 10, 1)) +
-  labs(x = expression("Mean velocity at 318 m (cm s"^-1*")"),
-       y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
-  theme(panel.border = element_blank(),
-        axis.line = element_line(),
-        legend.title = element_blank(), 
-        legend.position = "none",
-        plot.margin = unit(c(0, 0, 0, 0), "in"))
-
-# Legend for plots
-legend <- get_legend(GAMSAI_chl + 
-  guides(colour = guide_legend(nrow = 1, byrow = T)) +
-  theme(legend.position = "top"))
-
-# Combine plots
-HGAM <- plot_grid(legend, 
-                  plot_grid(GAMSAI_chl, GAMSAI_velo, ncol = 2,
-                            labels = "auto", label_size = 9,
-                            align = "hv", axis = "tblr"),
-                  ncol = 1, rel_heights = c(0.2, 1))
 # Save and display plot
-ggsave("plots/Figure_HGAM_SAI3.png", HGAM, 
-       height = 2.5, width = 6.5, dpi = 600, units = "in")
-HGAM
+ggsave("plots/Figure_HGAM_SAI3.png", GAMSAI_velo, 
+       height = 3, width = 6.5, dpi = 600, units = "in")
+GAMSAI_velo
 ```
 
 # Supplementary data
